@@ -21,7 +21,6 @@ package org.eclipse.jetty.proxy;
 import java.net.InetAddress;
 import java.net.URI;
 import java.net.UnknownHostException;
-import java.util.Collections;
 import java.util.Enumeration;
 import java.util.HashSet;
 import java.util.Iterator;
@@ -29,7 +28,6 @@ import java.util.Locale;
 import java.util.Set;
 import java.util.concurrent.Executor;
 import java.util.concurrent.TimeoutException;
-
 import javax.servlet.AsyncContext;
 import javax.servlet.ServletConfig;
 import javax.servlet.ServletContext;
@@ -84,21 +82,17 @@ import org.eclipse.jetty.util.thread.QueuedThreadPool;
 public abstract class AbstractProxyServlet extends HttpServlet
 {
     protected static final String CLIENT_REQUEST_ATTRIBUTE = "org.eclipse.jetty.proxy.clientRequest";
-    protected static final Set<String> HOP_HEADERS;
-    static
-    {
-        Set<String> hopHeaders = new HashSet<>();
-        hopHeaders.add("connection");
-        hopHeaders.add("keep-alive");
-        hopHeaders.add("proxy-authorization");
-        hopHeaders.add("proxy-authenticate");
-        hopHeaders.add("proxy-connection");
-        hopHeaders.add("transfer-encoding");
-        hopHeaders.add("te");
-        hopHeaders.add("trailer");
-        hopHeaders.add("upgrade");
-        HOP_HEADERS = Collections.unmodifiableSet(hopHeaders);
-    }
+    protected static final Set<String> HOP_HEADERS = Set.of(
+            "connection",
+            "keep-alive",
+            "proxy-authorization",
+            "proxy-authenticate",
+            "proxy-connection",
+            "transfer-encoding",
+            "te",
+            "trailer",
+            "upgrade"
+    );
 
     private final Set<String> _whiteList = new HashSet<>();
     private final Set<String> _blackList = new HashSet<>();
@@ -353,11 +347,11 @@ public abstract class AbstractProxyServlet extends HttpServlet
      */
     protected HttpClient newHttpClient()
     {
-        int selectors = Math.max(1,ProcessorUtils.availableProcessors()/2);
+        int selectors = Math.max(1, ProcessorUtils.availableProcessors() / 2);
         String value = getServletConfig().getInitParameter("selectors");
         if (value != null)
             selectors = Integer.parseInt(value);
-        return new HttpClient(new HttpClientTransportOverHTTP(selectors),null);
+        return new HttpClient(new HttpClientTransportOverHTTP(selectors));
     }
 
     protected HttpClient getHttpClient()
@@ -568,11 +562,16 @@ public abstract class AbstractProxyServlet extends HttpServlet
         boolean aborted = proxyRequest.abort(failure);
         if (!aborted)
         {
-            int status = failure instanceof TimeoutException ?
-                    HttpStatus.REQUEST_TIMEOUT_408 :
-                    HttpStatus.INTERNAL_SERVER_ERROR_500;
+            int status = clientRequestStatus(failure);
             sendProxyResponseError(clientRequest, proxyResponse, status);
         }
+    }
+
+    protected int clientRequestStatus(Throwable failure) 
+    {
+        return failure instanceof TimeoutException ? 
+           HttpStatus.REQUEST_TIMEOUT_408 : 
+           HttpStatus.INTERNAL_SERVER_ERROR_500;
     }
 
     protected void onServerResponseHeaders(HttpServletRequest clientRequest, HttpServletResponse proxyResponse, Response serverResponse)
@@ -639,14 +638,19 @@ public abstract class AbstractProxyServlet extends HttpServlet
         if (_log.isDebugEnabled())
             _log.debug(getRequestId(clientRequest) + " proxying failed", failure);
 
-        int status = failure instanceof TimeoutException ?
-            HttpStatus.GATEWAY_TIMEOUT_504 :
-                HttpStatus.BAD_GATEWAY_502;
+        int status = proxyResponseStatus(failure);
         int serverStatus = serverResponse == null ? status : serverResponse.getStatus();
         if (expects100Continue(clientRequest) && serverStatus >= HttpStatus.OK_200)
             status = serverStatus;
         sendProxyResponseError(clientRequest, proxyResponse, status);
         
+    }
+
+    protected int proxyResponseStatus(Throwable failure) 
+    {
+        return failure instanceof TimeoutException ? 
+            HttpStatus.GATEWAY_TIMEOUT_504 : 
+            HttpStatus.BAD_GATEWAY_502;
     }
 
     protected int getRequestId(HttpServletRequest clientRequest)
